Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,5 @@
 <h1>This is your index!</h1>
 <h2>Article:</h2>
 <h3> <%@articles.each do |article| %>
-  <%= article.name %>
-
+  <%= article.title %>
 <%end%></h3>
