--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,3 +1,4 @@
 <h1>This is your edit page!</h1>
+<h2>This is your current article:<%=@article.title%></h2>
 <input id="hidden" type="hidden" name="_method" value="PATCH"></input>
 <input type="text"/>
