Automatically backed up by Learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,6 +1,6 @@
 <h1>This is your edit page!</h1>
 <h2>Current Title:<%=@article.title%></h2>
 <h2>Current Content:<%=@article.content%></h2>
-<input id="hidden" type="hidden" name="_method" value="PATCH"></input>
+<input id="hidden" type="hidden" name="_method" value="patch"></input>
 
 <input type="text"/>
