--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,5 +2,6 @@
 <h2>Current Title:<%=@article.title%></h2>
 <h2>Current Content:<%=@article.content%></h2>
 <input id="hidden" type="hidden" name="_method" value="patch"></input>
-
+  <input id="title" type="text" name="title" value="title"></input>
+  <input id="content" type="text" name="content" value="content"></input>
 <input type="text"/>
