--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -4,4 +4,5 @@
 <input id="hidden" type="hidden" name="_method" value="patch"></input>
   <input id="title" type="text" name="title" value="title"></input>
   <input id="content" type="text" name="content" value="content"></input>
+  <input id="submit" type="submit" name="submit" value="submit"></input>
 <input type="text"/>
